<resources>
    <!-- activity_splash_screen -->
    <string name="splash_loading">Загрузка…</string>
    <string name="splash_logo_desc">Логотип приложения</string>
    <string name="splash_icon_desc">Иконка приложения</string>
    <string name="splash_loading_indicator">Индикатор загрузки</string>
    <string name="splash_progress_desc">Логотип SimbirSoft mobile</string>

    <!-- fragment_profile -->
    <string name="app_name">Хочу помочь</string>
    <string name="profile_date_of_birth">Дата рождения</string>
    <string name="profile_field_of_activity">Сфера деятельности</string>
    <string name="profile_push_notifications">Получать push-уведомления</string>
    <string name="profile_friends_list">Ваши друзья</string>
    <string name="profile_logout_button">Выйти из аккаунта</string>
    <string name="profile_sample_name">Константинов Денис</string>
    <string name="profile_sample_date">01 февраля 1980</string>
    <string name="profile_sample_activity">Хирургия, травмотология</string>
    <string name="profile_sample_friend_1">Дмитрий Валерьевич</string>
    <string name="profile_sample_friend_2">Евгений Александров</string>
    <string name="profile_sample_friend_3">Виктор Кузнецов</string>
    <string name="permission_required">Требуется разрешение</string>
    <string name="camera_permission_settings_message">Для съемки фотографий требуется доступ к камере. Пожалуйста, включите его в настройках.</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="cancel">Отмена</string>
    <string name="profile_load_error">Не удалось загрузить список друзей</string>

    <!-- bottom_menu_navigation -->
    <string name="nav_news">Новости</string>
    <string name="nav_search">Поиск</string>
    <string name="nav_help">Помочь</string>
    <string name="nav_history">История</string>
    <string name="nav_profile">Профиль</string>

    <!-- profile_menu -->
    <string name="profile_edit_button">Редактировать</string>

    <!-- edit_photo_dialog -->
    <string name="edit_photo_dialog_edit_title">Редактировать</string>
    <string name="edit_photo_dialog_choose_photo">Выбрать фото</string>
    <string name="edit_photo_dialog_take_picture">Сделать снимок</string>
    <string name="edit_photo_dialog_delete_photo">Удалить</string>

    <!-- fragment_help -->
    <string name="help_label">Помочь</string>
    <string name="help_choose_category_label">Выберите категорию помощи</string>
    <string name="help_load_error">Не удалось загрузить список категорий</string>

    <!-- item_help -->
    <string name="help_children_category_title">Дети</string>
    <string name="help_adult_category_title">Взрослые</string>
    <string name="help_animals_category_title">Животные</string>
    <string name="help_old_category_title">Пожилые</string>
    <string name="help_events_category_title">Мероприятия</string>

    <!-- fragment_search -->
    <string name="search_hint_input_name_organization">Введите название организации</string>
    <string name="search_event_title">По мероприятиям</string>
    <string name="search_nko_title">По НКО</string>
    <string name="search_list_keywords_label">Ключевые слова: мастер-класс, помощь</string>
    <string name="search_list_search_results_label">Результаты поиска: 109 мероприятий</string>
    <string name="tab_title_events">По мероприятиям</string>
    <string name="tab_title_organizations">По НКО</string>

    <string name="empty_news_list">По заданным категориям новостей нет</string>

    <!-- FilterFragment -->
    <string name="filter_change_apply">Изменения приняты</string>
    <string name="filter_load_error">Не удалось загрузить фильтры</string>

    <!-- NewsFragment -->
    <string name="title_news">Новости</string>
    <string name="news_load_error">Не удалось загрузит список новостей</string>

    <!-- NewsDetailFragment -->
    <string name="title_filter">Фильтр</string>
    <string name="category_help">Категории помощи:</string>
    <string name="link_news_owner_mail"><u>Напишите нам</u></string>
    <string name="link_news_owner_web"><u>Перейти на сайт организации</u></string>
    <string name="help_things">Помочь\nвещами</string>
    <string name="help_volunteer">Стать\nволонтером</string>
    <string name="help_prof">Проф.\nпомощь</string>
    <string name="help_money">Помочь\nденьгами</string>
    <string name="questions_news">У вас есть вопросы?</string>
    <string name="temp_count_count">+102</string>
    <string name="filter_saved_toast">Фильтры успешно сохранены</string>
    <string name="no_news_available">Нет новостей, соответствующих выбранным фильтрам</string>
    <string name="news_detail_load_error">Не удалось загрузить новость</string>

    <string name="date_single">(%s)</string>
    <string name="date_range">(%s – %s)</string>
    <string name="event_upcoming">Осталось %s %s</string>
    <string name="event_today">Событие сегодня %s</string>
    <string name="event_finished">Событие завершено %s</string>

    <string name="tab_name_search_by_events">По мероприятиям</string>
    <string name="tab_name_search_by_nko">По НКО</string>
    <string name="hint_input_name_organization">Введите название организации</string>
    <string name="hint_input_title_event">Введите название мероприятия</string>

    <!-- SearchFragmentEvents -->
    <string name="init_help_search_text">Напишите в строке поиска название\nмероприятия или ключевые слова.</string>
    <string name="exemple">Например,</string>
    <string name="example_items"><u>мастер-класс, помощь</u></string>

    <!-- AuthorizationFragment -->
    <string name="title_authorization">Авторизация</string>
    <string name="sign_in_through_social_networks">Для участия в мероприятиях войдите\nв приложение через социальные сети</string>
    <string name="login_authorization">Или авторизуйтесь через приложение</string>
    <string name="email_title">E-mail</string>
    <string name="hint_input_e_mail">Введите e-mail</string>
    <string name="password_title">Пароль</string>
    <string name="hint_input_password">Введите пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="forgot_your_password"><u>Забыли пароль?</u></string>
    <string name="registration"><u>Регистрация</u></string>

    <string name="search_by_events_text_hint">Напишите в строке поиска название\nмероприятия или ключевые слова.</string>
    <string name="search_by_events_example_text">Например,</string>
    <string name="search_by_events_example_keywords"><u>мастер-класс, помощь</u></string>

    <string name="search_no_results">По вашему запросу ничего не найдено</string>



</resources>