<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/init_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:importantForAccessibility="no"
        android:src="@drawable/icon_zoom" />

    <TextView
        style="@style/TextStyle10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/icon_margin_top"
        android:gravity="center"
        android:text="@string/search_by_events_text_hint" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyle20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_by_events_example_text" />

        <TextView
            style="@style/TextStyle7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_start"
            android:text="@string/search_by_events_example_keywords"
            android:textColor="@color/green" />
    </LinearLayout>

</LinearLayout>


