<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutAuthorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAuthorization"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <ImageView
                android:id="@+id/imageViewFilterBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/margin_medium"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/textViewLabelFragment"
                style="@style/HeadingMediumWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_authorization" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAuthorizationSocialSign"
            style="@style/TextStyle10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/sign_in_through_social_networks" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewAuthorizationVK"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_social_vk" />

            <ImageView
                android:id="@+id/imageViewAuthorizationFacebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_social_fb" />

            <ImageView
                android:id="@+id/imageViewAuthorizationClassmates"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="60dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_social_ok" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewAuthorizationLogin"
            style="@style/TextStyle10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/login_authorization" />

        <TextView
            android:id="@+id/textViewAuthorizationEmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/margin_default"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="4sp"
            android:text="@string/email_title"
            android:textColor="@color/black_38"
            android:textSize="12sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/editTextAuthorizationEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/black_12"
            android:hint="@string/hint_input_e_mail"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/editTextAuthorizationPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/margin_default"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="4sp"
            android:text="@string/password_title"
            android:textColor="@color/black_38"
            android:textSize="12sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/editTextAuthorizationPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/black_12"
            android:drawableEnd="@drawable/ic_open_password"
            android:hint="@string/hint_input_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAuthorization"
            style="@style/TextStyle17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/margin_default_large"
            android:backgroundTint="@drawable/color_login_button"
            android:elevation="2dp"
            android:enabled="false"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/login_button_text"
            android:textAllCaps="true"
            android:translationZ="2dp"
            app:cornerRadius="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_default"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textViewAuthorizationForgotPassword"
                style="@style/BodyTextLinkGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="24dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/forgot_your_password" />

            <TextView
                android:id="@+id/textViewAuthorizationRegistration"
                style="@style/BodyTextLinkGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:minHeight="24dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/registration" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>